# aircraft-datcom

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: heritage.md
pydatcom/: README.md  __init__.py  aero.py  atmosphere.py  cli.py  constants.py  flaps.py  flight_condition.py  geometry.py  input_parser.py  lift_slope.py  utils.py  wing_body.py
pydatcom.egg-info/: PKG-INFO  SOURCES.txt
pydatcom/docs/: analysis.md  validation.md
pydatcom/tests/: test_aero.py  test_atmosphere.py  test_cli.py  test_error_handling.py  test_flaps.py  test_flight_condition.py  test_geometry.py  test_input_parser.py  test_integration.py  test_lift_slope.py  test_utils.py  test_wing_body.py
scripts/: datcom2xml.py
