[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydatcom"
version = "0.1.0"
description = "Python translation of USAF Digital DATCOM (1970s FORTRAN) for aircraft preliminary aerodynamic estimation"
readme = "README"
license = "Unlicense"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["pydatcom*"]

[tool.pytest.ini_options]
testpaths = ["pydatcom/tests"]
